--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
+.nav-ul {
+  padding: 5px;
+  margin: 0px;
+  background-color: skyblue;
+}
+
 .nav-ul li {
   display: inline-block;
   padding: 10px;
+}
+
+.nav-ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px;
 }
 
 .App-logo {
