--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@
   padding: 5px;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  background-color: skyblue;
+  width: 100%;
+  text-align: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
